# obliteratus-to-sidecar

./: .gitignore  NOTICE  README.md  pyproject.toml
obliteratus_to_sidecar/: __init__.py  __main__.py  adapter.py  arch_map.py  cli.py
patches/: 0001-whitened-svd-empty-result.patch  0002-transformers-disable-grouped-mm-on-rocm.patch  0003-obliteratus-summon-offload-folder.patch  0004-loader-max-memory-env-overrides.py
scripts/: reemit_missing_selected.sh  run_validation_matrix.sh
